# playground

./: .gitignore  CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE
books/ari/: 2-1-2.cpp  2-1.cpp
books/gnue_dev_tool/: a.out  charbit.c  gccdump.s  hello.c  hello.i  hello.s  hello_allinone.c  hello_byhand.s  hello_define.c  hello_define.i  hello_define.s  hello_nostdinc.c  hello_segfault.c
books/linux_programming/: README.md
books/linux_system_programming/: words.org
books/programming_pearls/: util.c
c/: .gitignore  junk.c  junk2.c  junk5.c  p2.c  stack.c  static.c
data_structure/: binary_indexed_tree.cpp
elisp/: paren.el
elixir/: sandbox.exs
erlang/: a.beam  a.erl  myfunc.beam  myfunc.erl  sample61.beam  sample61.erl  test.beam  test.erl
go/: .gitignore
haskell/: momize.hs  stack.hs
misc/: all_search.cpp
ocaml/: .gitignore  test.ml
oj/: .gitignore
ppp/: README.md  merge_sort.rb  polish_notation.rb  sieve_of_eratosthenes.rb  tree.rb
ruby/: .gitignore  .rubocop.yml  case.rb  happy_new_year.rb
rust/: .gitignore
rust/sandbox/: Cargo.toml
rust/sandbox/src/: bit.rs  buf.rs  closure.rs  fu.rs  lib.rs  life.rs  main.rs  own.rs  stri.rs  thr.rs  tr.rs  trait_test.rs
rust/sandbox/src/bite/: mod.rs
rust/sandbox/src/cache/: mod.rs  shared.rs
rust/sandbox/src/linked_list/: mod.rs  old.rs  old2.rs  old3.rs  old4.rs  old5.rs
rust/sandbox/src/ram/: mod.rs
rust/sandbox/src/rpc/: agent.rs  config.rs  mod.rs  tcp_server.rs
rust/sandbox/src/tcp_conn/: client.rs  mod.rs  server.rs
scala/: .gitignore
shell/: slider
(+2070 files in other folders)
