[package]
name = "sandbox"
version = "0.1.0"
authors = ["ganmacs <ganmacs@gmail.com>"]

[dependencies]
tokio-core = "0.1"
futures = "0.1.14"
tokio-io = "0.1"
log = "0.3"
env_logger = "0.3"
rand = "0.3"
tokio-proto = { git = "https://github.com/tokio-rs/tokio-proto" }
bytes = { git = "https://github.com/carllerche/bytes", rev = "2c27ddaf7e860424071583bcf5913bcdf43e9637" }
byteorder = "1.0.0"
fasthash = "0.2"
